==> phamtung93/TestOPMS_v1.0/application/sources/platform/stm32l/sys_cfg.c <==
#include <stdint.h>
#include <stdbool.h>
#include <stdarg.h>
#include "sys_cfg.h"
#include "system.h"
#include "stm32l1xx.h"
#include "stm32l1xx_conf.h"
#include "system_stm32l1xx.h"
#include "core_cm3.h"
#include "core_cmFunc.h"
#include "xprintf.h"
#include "ring_buffer.h"
#include "sys_dbg.h"
#include "sys_def.h"
#include "sys_ctrl.h"
#include "sys_io.h"
#include "sys_dbg.h"
#include "ak.h"
#define RING_BUFFER_CHAR_SHELL_SEND_BUFFER_SIZE		512

void sys_cfg_clock() {
	/* Enable the HSI oscillator */
	RCC_HSICmd(ENABLE);
	while(RCC_GetFlagStatus(RCC_FLAG_HSIRDY) == RESET);

	SystemCoreClockUpdate();

	/* NVIC configuration */
	NVIC_PriorityGroupConfig(NVIC_PriorityGroup_4);
}

void sys_ctrl_shell_put_char(uint8_t c) {
	ENTRY_CRITICAL();
	ring_buffer_char_put(&ring_buffer_char_shell_send, c);
	EXIT_CRITICAL();

	if (ring_buffer_char_shell_sending_flag == 0) {
		USART_ITConfig(USARTx, USART_IT_TXE, ENABLE);
	}
}

void sys_ctrl_shell_sw_to_block() {
	while (ring_buffer_char_shell_sending_flag == 1 \
		   && (! ring_buffer_char_is_empty(&ring_buffer_char_shell_send)));

	ENTRY_CRITICAL();

	xprintf_stream_io_out = sys_ctrl_shell_put_char_block;

	USART_ClearITPendingBit(USARTx, USART_IT_TXE);
	USART_ITConfig(USARTx, USART_IT_TXE, DISABLE);

	EXIT_CRITICAL();
}

void sys_ctrl_shell_sw_to_nonblock() {
	ENTRY_CRITICAL();
	xprintf_stream_io_out = sys_ctrl_shell_put_char;
	USART_ITConfig(USARTx, USART_IT_TXE, ENABLE);
	EXIT_CRITICAL();
}

void sys_ctr_sleep_wait_for_irq() {
	PWR_EnterSleepMode(PWR_Regulator_ON, PWR_SLEEPEntry_WFI);
}

void sys_ctr_stop_mcu() {
	uint32_t BOROptionBytes = 0;
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_PWR, ENABLE);

	BOROptionBytes = FLASH_OB_GetBOR();

	if((BOROptionBytes & 0x0F) != OB_BOR_OFF)
	{
		/* Unlocks the option bytes block access */
		FLASH_OB_Unlock();

		/* Clears the FLASH pending flags */
		FLASH_ClearFlag(FLASH_FLAG_EOP|FLASH_FLAG_WRPERR | FLASH_FLAG_PGAERR
						| FLASH_FLAG_SIZERR | FLASH_FLAG_OPTVERR);

		/* Select the desired V(BOR) Level ---------------------------------------*/
		FLASH_OB_BORConfig(OB_BOR_OFF);

		/* Launch the option byte loading */
		FLASH_OB_Launch();
	}

	/* Configure all GPIO as analog to reduce current consumption on non used IOs */
	/* Enable GPIOs clock */
	RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOA | RCC_AHBPeriph_GPIOB | RCC_AHBPeriph_GPIOC |
						  RCC_AHBPeriph_GPIOD | RCC_AHBPeriph_GPIOE | RCC_AHBPeriph_GPIOH
						  , ENABLE);

	GPIO_InitTypeDef GPIO_InitStructure;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AN;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_40MHz;
	GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_All;
	GPIO_Init(GPIOC, &GPIO_InitStructure);
	GPIO_Init(GPIOD, &GPIO_InitStructure);
	GPIO_Init(GPIOE, &GPIO_InitStructure);
	GPIO_Init(GPIOH, &GPIO_InitStructure);
	GPIO_Init(GPIOA, &GPIO_InitStructure);
	GPIO_Init(GPIOB, &GPIO_InitStructure);

	/* Disable GPIOs clock */
	RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOA | RCC_AHBPeriph_GPIOB | RCC_AHBPeriph_GPIOC |
						  RCC_AHBPeriph_GPIOD | RCC_AHBPeriph_GPIOE | RCC_AHBPeriph_GPIOH
						  , DISABLE);

	/* Enable Ultra low power mode */
	PWR_UltraLowPowerCmd(ENABLE);

	/* Enter Stop Mode */
	PWR_EnterSTOPMode(PWR_Regulator_LowPower, PWR_STOPEntry_WFI);

	while(1){}
}
